--- a/client/styles.css
+++ b/client/styles.css
@@ -1,4 +1,4 @@
-/* Основные стили */
+/* Main styles */
 * {
     margin: 0;
     padding: 0;
@@ -6,8 +6,8 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #102720;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #062A20;
     color: white;
     line-height: 1.6;
 }
@@ -19,69 +19,69 @@ body {
     text-align: center;
 }
 
-/* Заголовок */
+/* Header */
 header {
-    margin-bottom: 60px;
+    margin-bottom: 64px;
 }
 
 h1 {
-    font-size: 40px;
-    font-weight: bold;
-    margin-bottom: 15px;
+    font-size: 62px;
+    font-weight: 700;
+    margin-bottom: 32px;
 }
 
 .subtitle {
-    font-size: 24px;
-    color: #4cd4a3;
+    font-size: 32px;
+    font-weight: 800;
+    color: #43F0B6;
 }
 
-/* Блоки с фичами */
-.features {
-    margin-bottom: 50px;
+/* Features section */
+.features { 
+    margin-bottom: 60px;
 }
 
 .feature-item {
+    font-size: 18px;
+    font-weight: 600;
     display: flex;
     align-items: flex-start;
-    margin-bottom: 30px;
+    margin-bottom: 32px;
     text-align: left;
 }
 
-.icon {
-    color: #eb8b64;
-    font-size: 24px;
-    margin-right: 15px;
-    min-width: 24px;
+.icon-image {
+    margin-right: 12px;
 }
 
-/* Специальное предложение */
+/* Special offer section */
 .special-offer {
-    background-color: #13312a;
-    border-radius: 10px;
-    padding: 30px;
-    margin-bottom: 50px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 60px;
     position: relative;
 }
 
-.offer-icon {
-    color: #eb8b64;
-    font-size: 24px;
-    margin-bottom: 10px;
+.offer-text {
+  text-align: justify;
+  opacity: 0.73;
 }
 
 .highlight {
-    color: #eb8b64;
+    color: #FB834F;
     font-weight: bold;
 }
 
 .cta-button {
-    background-color: #eb8b64;
+    width: 100%;
+    background-color: #FB834F;
     color: white;
     border: none;
-    border-radius: 25px;
-    padding: 15px 50px;
-    font-size: 18px;
-    font-weight: bold;
+    border-radius: 20px;
+    padding: 12px 10px;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     margin-top: 25px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -91,26 +91,34 @@ h1 {
     background-color: #f09e7a;
 }
 
-/* Что мы предлагаем */
+/* What we offer section */
 .what-we-offer {
-    margin-bottom: 50px;
     text-align: left;
+    max-width: 360px;
+    margin: 0 auto 60px;
 }
 
-.section-icon {
-    color: #4cd4a3;
-    font-size: 24px;
-    margin-bottom: 15px;
-    text-align: center;
+.offer-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.offer-title h2 {
+    margin-bottom: 0;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 20px;
+    font-weight: 800;
     margin-bottom: 20px;
-    color: #4cd4a3;
+    color: #43F0B6;
+    text-align: center;
 }
 
-/* Источники дохода */
+/* Income sources section */
 .income-sources {
     margin-bottom: 30px;
     text-align: left;
@@ -118,6 +126,8 @@ h2 {
 
 ul {
     list-style-type: none;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 li {
@@ -128,78 +138,98 @@ li {
 
 li:before {
     content: "•";
-    color: #4cd4a3;
+    color: #fff;
     position: absolute;
     left: 0;
     font-weight: bold;
 }
 
-/* Модальное окно */
+/* Modal window */
 .modal {
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    height: 100dvh;
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: 1000;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .modal-content {
-    background-color: #102720;
-    margin: 0 auto;
-    padding: 30px 20px;
+    background-color: #062A20;
+    margin: 20px auto;
     width: 90%;
-    max-width: 450px;
+    max-width: 630px;
     border-radius: 10px;
     position: relative;
-    max-height: 95vh;
+    max-height: 95dvh;
     overflow-y: auto;
 }
 
+.modal-header {
+    padding: 30px 20px 0;
+    display: flex;
+    align-items: flex-start;
+    background-color: #062A20;
+}
+
 .close-modal {
-    color: #aaa;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 28px;
-    font-weight: bold;
     cursor: pointer;
 }
 
 .modal-title {
+    flex-grow: 1;
     font-size: 24px;
+    font-weight: 700;
     color: white;
     text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 12px;
+}
+
+.modal-body {
+    max-height: calc(95dvh - 81px);
+    overflow-y: auto;
+    padding: 0 20px 30px 20px;
 }
 
 .modal-subtitle {
-    color: #4cd4a3;
+    font-size: 18px;
+    font-weight: 800;
+    color: #43F0B6;
     text-align: center;
-    margin-bottom: 25px;
+    margin-bottom: 42px;
+}
+
+.waitlist-form {
+    max-width: 330px;
+    margin: auto;
 }
 
 .form-group {
-    margin-bottom: 20px;
+    margin-bottom: 42px;
 }
 
 .form-group label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 12px;
     text-align: left;
     font-size: 14px;
+    font-weight: 600;
 }
 
 .form-group input {
     width: 100%;
-    padding: 10px;
-    border: 1px solid #2a4d40;
+    padding: 4px 8px;
+    border: 1px solid #fff;
     border-radius: 4px;
-    background-color: #102720;
+    background-color: #062A20;
     color: white;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .questions {
@@ -209,13 +239,11 @@ li:before {
 .question-header {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
-}
-
-.checklist-icon {
-    color: #4cd4a3;
-    font-size: 20px;
-    margin-right: 10px;
+    justify-content: center;
+    margin-bottom: 22px;
+    font-size: 18px;
+    font-weight: 800;
+    color: #FB834F;
 }
 
 .question {
@@ -223,21 +251,31 @@ li:before {
     text-align: left;
 }
 
+.question-container {
+    display: flex;
+    align-items: top;
+    gap: 6px;
+    margin-bottom: 12px;
+}
+
 .question-number {
     display: inline-block;
-    width: 24px;
-    height: 24px;
+    width: 25px;
+    height: 25px;
     background-color: #eb8b64;
-    border-radius: 50%;
+    border-radius: 4px;
     color: white;
     text-align: center;
-    line-height: 24px;
+    line-height: 25px;
     font-size: 14px;
-    margin-bottom: 5px;
+    font-weight: 600;
+    flex-shrink: 0;
 }
 
 .question p {
-    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 600;
 }
 
 .options {
@@ -248,14 +286,18 @@ li:before {
 
 .option-btn {
     width: 100%;
-    padding: 10px;
-    border: 1px solid #2a4d40;
+    padding: 4px 8px;
+    border: 1px solid #fff;
     border-radius: 4px;
-    background-color: #102720;
+    background-color: #062A20;
     color: white;
     text-align: left;
     cursor: pointer;
     transition: background-color 0.2s;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .option-btn:hover {
@@ -268,25 +310,29 @@ li:before {
 }
 
 .question textarea {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
     height: 100px;
     padding: 10px;
-    border: 1px solid #2a4d40;
+    border: 1px solid #fff;
     border-radius: 4px;
-    background-color: #102720;
+    background-color: #062A20;
     color: white;
     resize: none;
 }
 
 .submit-btn {
     width: 100%;
-    padding: 15px;
-    background-color: #eb8b64;
+    padding: 12px 10px;
+    background-color: #FB834F;
     color: white;
     border: none;
-    border-radius: 25px;
-    font-size: 18px;
-    font-weight: bold;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 700;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -295,17 +341,118 @@ li:before {
     background-color: #f09e7a;
 }
 
-/* Адаптивный дизайн */
-@media (max-width: 600px) {
+/* Adaptiveness */
+@media (max-width: 767px) {
     h1 {
-        font-size: 32px;
+        font-size: 28px;
+        margin-bottom: 12px;
     }
-    
-    .feature-item {
-        flex-direction: column;
+
+    .subtitle {
+        font-size: 20px;
     }
-    
-    .icon {
-        margin-bottom: 10px;
+
+    header, .features {
+        margin-bottom: 44px;
+    }
+
+    .feature-item, .offer-text {
+        font-size: 14px;
+    }
+
+    .special-offer {
+        margin-bottom: 40px;
+    }
+
+    ul {
+        font-size: 14px;
+    }
+
+    .what-we-offer {
+        margin-bottom: 34px;
+    }
+}
+
+/* Toast styles */
+#toast-container {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1050;
+}
+
+.toast {
+    min-width: 300px;
+    margin-top: 15px;
+    padding: 12px 10px;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    color: white;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    animation: slideIn 0.3s ease-out forwards;
+    opacity: 0;
+    transform: translateX(100%);
+    gap: 6px;
+}
+
+.toast-success {
+    background: linear-gradient(135deg, #43a047 0%, #2e7d32 100%);
+}
+
+.toast-error {
+    background: linear-gradient(135deg, #e53935 0%, #c62828 100%);
+}
+
+.toast-icon {
+    margin-right: 12px;
+    font-size: 20px;
+}
+
+.toast-message {
+    flex-grow: 1;
+}
+
+.toast-close {
+    opacity: 0.7;
+    cursor: pointer;
+    transition: opacity 0.2s;
+}
+
+.toast-close:hover {
+    opacity: 1;
+}
+
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    100% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+}
+
+.toast-fadeout {
+    animation: fadeOut 0.3s ease-in forwards;
+}
+
+@media (max-width: 767px) {
+    #toast-container {
+        left: 30px;
     }
 }
