--- a/client/styles.css
+++ b/client/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #062A20;
-    color: white;
+    color: #fff;
     line-height: 1.6;
 }
 
@@ -75,7 +75,7 @@ h1 {
 .cta-button {
     width: 100%;
     background-color: #FB834F;
-    color: white;
+    color: #fff;
     border: none;
     border-radius: 20px;
     padding: 12px 10px;
@@ -183,7 +183,7 @@ li:before {
     flex-grow: 1;
     font-size: 24px;
     font-weight: 700;
-    color: white;
+    color: #fff;
     text-align: center;
     margin-bottom: 12px;
 }
@@ -225,7 +225,7 @@ li:before {
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: #062A20;
-    color: white;
+    color: #fff;
     font-size: 12px;
     line-height: 18px;
     font-weight: 600;
@@ -264,7 +264,7 @@ li:before {
     height: 25px;
     background-color: #eb8b64;
     border-radius: 4px;
-    color: white;
+    color: #fff;
     text-align: center;
     line-height: 25px;
     font-size: 14px;
@@ -290,7 +290,7 @@ li:before {
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: #062A20;
-    color: white;
+    color: #fff;
     text-align: left;
     cursor: pointer;
     transition: background-color 0.2s;
@@ -320,7 +320,7 @@ li:before {
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: #062A20;
-    color: white;
+    color: #fff;
     resize: none;
 }
 
@@ -328,7 +328,7 @@ li:before {
     width: 100%;
     padding: 12px 10px;
     background-color: #FB834F;
-    color: white;
+    color: #fff;
     border: none;
     border-radius: 20px;
     font-size: 20px;
@@ -387,7 +387,7 @@ li:before {
     padding: 12px 10px;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    color: white;
+    color: #fff;
     font-weight: 500;
     display: flex;
     align-items: center;
